--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,8 +1,20 @@
-﻿body {
+﻿.main-content {
+    height: 100vh;
+    background-color: #ffffff;
     padding-top: 50px;
-    padding-bottom: 20px;
+    max-width: 1000px;
 }
 
+.main-content.small {
+    max-width: 800px !important;
+}
+
+body {
+    height: 100vh;
+    background-color: #F5F5F5;
+}
+
+/** DEFAULT STYLES */
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
